# ivr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.sh  tox.ini
data/: crop.py  pdf_to_png.py
shell_lib/: gpu_confirm.sh  utilfuncs.sh
src/: callbacks.py  config.py  datamodule.py  dataset.py  model.py  test.py  train.py  utils.py
src/attack/: attack.py  attack_dispatcher.py  fgsm.py  mim.py  pgd.py  test_adv.py
